@@ -4,7 +4,7 @@ Donate link: http://www.mmilan.com/
 Tags: latest, post, category, front, page, archive, news
 Requires at least: 2.6
 Tested up to: 2.9.1
-Stable tag: 0.6.1
+Stable tag: 0.6.2
 
 Displays lists of posts from selected categories. You can select how many different lists you want, sort posts by date or random.
 
@@ -19,6 +19,9 @@ Lists can be show whereber you want - above or below posts, in archive, or on si
 If you want to show a list on one page (or post) you can use a shortcode [mm-breaking-news] when you write and the whole bullet list will be displayed.
 
 Changelog:
+
+	2010-01-14, ver 0.6.2, Milan Milosevic
+		Bugfix: problem with links
 
 	2010-01-13, ver 0.6.1, Milan Milosevic
 		Bugfix: problems with placement of shortcode content.
