@@ -1,3 +1,6 @@
+2010-01-14, ver 0.6.2, Milan Milosevic
+	Bugfix: problem with links
+
 2010-01-13, ver 0.6.1, Milan Milosevic
 	Bugfix: problems with placement of shortcode content.
 
